update-landing-page

--- a/layouts/partials/landing/feature_grid.html
+++ b/layouts/partials/landing/feature_grid.html
@@ -38,7 +38,7 @@ src="/assets/js/collapse.js">
                                           <div class="card-header" id="headingOne">
                                             <h5 class="mb-0">
                                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                knowldege base
+                                                Workshop Tracks
                                               </button>
                                             </h5>
                                           </div>
@@ -56,7 +56,7 @@ src="/assets/js/collapse.js">
                                                         {{ range .modules }}
                                                         <tr>
                                                             <td>{{ .title }}</td>
-                                                            <td><a href="{{ .url }}" target="_blank"> Learn </a></td>
+                                                            <td><a href="https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main{{ .url }}" target="_blank"> Learn </a></td>
                                                         </tr>
                                                         {{ end }}
                                                     </tbody>
