--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
     {{- end }}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="KubeDaily - Demestifying Container and Orchestration Ecosystem" />
-   >
+    <meta name="keywords" content="KubeDaily, Kubernetes, Docker, Container, Orchestration, DevOps, Cloud Native" />
     
     <script 
     src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/quizdown.js">
