--- a/layouts/partials/landing/hero.html
+++ b/layouts/partials/landing/hero.html
@@ -2,6 +2,8 @@
 {{ with (index .Site.Data.landing $sectionTitle) }}
 {{ if eq .enable true }}
 <!-- Hero Start -->
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 {{ with .backgroundImage }}
     {{ $path := .path | default "images" }}
     {{ $filename := .filename }}
@@ -58,6 +60,11 @@
                     </h4>
                     {{ with .subtitle }}
                     <p class="para-desc text-muted mb-0">{{ . | markdownify }}</p>
+                    <a class="github-button" href="https://github.com/kubernetesdaily/kubernetesdaily.github.io" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" data-show-count="true" aria-label="Star kubernetesdaily/kubernetesdaily.github.io on GitHub">Star</a>
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/kubernetesdaily" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" data-show-count="true" aria-label="Follow @kubernetesdaily on GitHub">Follow @kubernetesdaily</a>
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/kubernetesdaily/kubernetesdaily.github.io/fork" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" data-show-count="true" aria-label="Fork kubernetesdaily/kubernetesdaily.github.io on GitHub">Fork</a>
                     {{ end }}
 
                     <div class="mt-3">
@@ -88,7 +95,7 @@
                     {{ end }}
                 </div>
             </div>
-
+<!-- Place this tag where you want the button to render. -->
             <div class="col-lg-6 col-md-6 mt-4 pt-4 mt-sm-0 pt-sm-0">
                 {{ with .image }}
                     {{ $path := .path | default "images" }}
