update-contributor-list

--- a/layouts/partials/landing/feature_grid.html
+++ b/layouts/partials/landing/feature_grid.html
@@ -96,3 +96,13 @@
 <!-- features End -->
 {{ end }}
 {{ end }}
+<div class="jumbotron">
+    <h5 class="display-8"> Thanks to all our contributors! 🎉 </h5>
+    <a href="https://github.com/kubernetesdaily/kubernetesdaily.github.io/graphs/contributors">
+        <img src="https://contrib.rocks/image?repo=kubernetesdaily/kubernetesdaily.github.io" />
+      </a>
+      <a href="https://github.com/kubernetesdaily/kubernetesdaily.github.io" class="btn btn-primary" role="button" aria-disabled="true">
+        <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+        <span>Join the Movement</span>
+    </a>
+      </div>
