--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -62,8 +62,7 @@
     {{- end -}}
     <!-- Google Analytics v4 Config -->
     {{- if not hugo.IsServer }}
-    {{- if .Site.GoogleAnalytics }}
-        {{- template "_internal/google_analytics.html" . -}}
+    {{- if .Site.Config.Services.GoogleAnalytics.ID }}        {{- template "_internal/google_analytics.html" . -}}
    
     {{- end -}}
     {{- end -}}
