--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="KubeDaily - Demestifying Container and Orchestration Ecosystem" />
     <meta name="keywords" content="KubeDaily, Kubernetes, Docker, Container, Orchestration, DevOps, Cloud Native" />
-    
+
     <script 
     src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/quizdown.js">
  </script>
@@ -62,9 +62,9 @@
     {{- end -}}
     <!-- Google Analytics v4 Config -->
     {{- if not hugo.IsServer }}
-    {{- if .Site.Config.Services.GoogleAnalytics.ID }}        {{- template "_internal/google_analytics.html" . -}}
-   
+    {{- if site.Config.Services.GoogleAnalytics.ID }}        {{- template "_internal/google_analytics.html" . -}}
+
     {{- end -}}
     {{- end -}}
-   
+
 </head>
