--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -61,9 +61,9 @@
     {{- end -}}
     {{- end -}}
     <!-- Google Analytics v4 Config -->
-    {{- if not hugo.IsServer }}
-    {{- if site.Config.Services.GoogleAnalytics.ID }}        {{- template "_internal/google_analytics.html" . -}}
-
+   {{- if not hugo.IsServer }}
+    {{- if .Site.Params.googleAnalytics }}
+        {{- template "_internal/google_analytics.html" . -}}
     {{- end -}}
     {{- end -}}
 
