--- a/layouts/partials/docs/head.html
+++ b/layouts/partials/docs/head.html
@@ -100,19 +100,8 @@
     {{- end -}}
     <!-- Google Analytics v4 Config -->
     {{- if not hugo.IsServer }}
-    {{- if .Site.GoogleAnalytics }}
+    {{- if .Site.Config.Services.GoogleAnalytics.ID }}
         {{- template "_internal/google_analytics.html" . -}}
     {{- end -}}
     {{- end -}}
-    <script 
-    src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/quizdown.js">
- </script>
- <script 
-     src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdownKatex.js">
- </script>
- <script 
-     src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdownHighlight.js">
- </script>
- <script>quizdown.register(quizdownHighlight).register(quizdownKatex).init()</script> 
-
 </head>
